--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,7 @@ body {
   justify-content: center;
   flex-direction: column;
   height: 100vh;
+  margin: 0;
 }
 
 .container {
@@ -23,8 +24,8 @@ body {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
   position: relative;
   overflow: hidden;
-  width: 768px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 768px;
   min-height: 480px;
 }
 
@@ -50,7 +51,7 @@ body {
   background-color: #512da8;
   color: #fff;
   font-size: 12px;
-  padding: 10px 45px;
+  padding: 10px 20px;
   border: 1px solid transparent;
   border-radius: 8px;
   font-weight: 600;
@@ -71,7 +72,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 0 40px;
+  padding: 0 20px;
   height: 100%;
 }
 
@@ -209,4 +210,28 @@ body {
 
 .container.active .toggle-right {
   transform: translateX(200%);
+}
+
+@media (max-width: 768px) {
+  .container {
+    border-radius: 20px;
+  }
+
+  .container button {
+    padding: 10px 15px;
+  }
+
+  .container form {
+    padding: 0 10px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container button {
+    padding: 10px 12px;
+  }
+
+  .container form {
+    padding: 0 5px;
+  }
 }
